# StreamFormat

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE_ZH  README.md  README.zh.md
cmake/: sf-config.cmake
docs/: index.md
docs/ansi/: index.md  make_ansi_control.md  make_cursor.md  make_erase.md  make_scroll.md  make_sgr_control.md
docs/color/: index.md  make_color_arg.md
docs/format/: index.md  print.md  println.md  scan.md
docs/sformat/: index.md  sprint.md  sscan.md
docs/string_view/: index.md
include/: ansi.hpp  format.hpp  sformat.hpp  stream_format.h  stream_format.hpp  utility.hpp
include/sf/: ansi.hpp  color.hpp  format.hpp  sformat.hpp  stoi.hpp  string_view.hpp  utility.hpp
test/: basic_print.cpp  color.cpp  print.cpp  scan.cpp
